Add p5.play and leaf animations

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Sustainability for the Holidays</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.5/p5.min.js"></script>
+    <script src="p5.play/lib/p5.play.js" charset="utf-8"></script>
     <script src="game.js" charset="utf-8"></script>
     <style media="screen">
       body, html {
