--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.5/p5.min.js"></script>
     <script src="p5.play.js" charset="utf-8"></script>
     <script src="game.js" charset="utf-8"></script>
+    <script src="steamrail-heap/heap.js" charset="utf-8"></script>
+    <script src="leaderboard.js" charset="utf-8"></script>
     <style media="screen">
       body, html {
         margin: 0;
