--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sustainability for the Holidays</title>
+    <title>Recycling Run</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.5/p5.min.js"></script>
     <script src="p5.play.js" charset="utf-8"></script>
     <script src="game.js" charset="utf-8"></script>
