Change stocking to recycling bins

--- a/index.html
+++ b/index.html
@@ -5,24 +5,26 @@
     <title>Recycling Run</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.5/p5.min.js"></script>
     <script src="p5.play.js" charset="utf-8"></script>
-    <script src="game.js" charset="utf-8"></script>
-    <script src="steamrail-heap/heap.js" charset="utf-8"></script>
-    <script src="leaderboard.js" charset="utf-8"></script>
+
     <style media="screen">
       body, html {
         margin: 0;
         padding: 0;
         text-align: center;
+        height: 100%;
+        width: 100%;
       }
       canvas {
         position: absolute;
-        top: 50%;
-        left: 50%;
-        margin: -250px 0 0 -500px;
+        left: 0;
+        top: 0;
       }
     </style>
   </head>
   <body>
 
+    <script src="game.js" charset="utf-8"></script>
+    <script src="steamrail-heap/heap.js" charset="utf-8"></script>
+    <script src="leaderboard.js" charset="utf-8"></script>
   </body>
 </html>
